# scholium

./: .gitignore  API_KEY_SECURITY.md  CHANGELOG.md  IMPROVEMENTS.md  INSTALLATION.md  LICENSE  MANIFEST.in  PACKAGE_README.md  PROVIDER_COMMANDS.md  QUICK_REFERENCE.md  README.md  UPDATE_DOCUMENTATION.md  config.yaml  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tags
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: DEPLOYMENT_GUIDE.md  FORMAT_CHOICE.md  GITHUB_PAGES_SETUP.md  README.md  about.md  conf.py  contributing.md  contributing.rst  docs.yml  examples.md  examples.rst  getting_started.rst  incremental-lists.md  index.rst  installation.rst  markdown-format.rst  modules.rst  narration-format.md  reference.rst  requirements-docs.txt  resources.rst  theme_overrides.css  timing-control.rst  troubleshooting.md  troubleshooting.rst  tts-providers.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/demo/: build_demo.sh  lecture.md  make_gif.py
docs/user/: advanced-config.md  cli.md  cli.rst  demo.md  incremental-lists.md  index.rst  installation.md  installation.rst  markdown-format.md  narration-format.md  quickstart.md  quickstart.rst  timing-control.md  tts-providers.md  tts-providers.rst  voice_storage.md
examples/: batch_driver.py  example.md  example_long.md
src/: __init__.py  config.py  main.py  slide_processor.py  tts_engine.py  unified_parser.py  video_generator.py
src/scholium/: __init__.py  config.py  main.py  main.py.old  slide_processor.py  train_voice.py  tts_engine.py  unified_parser.py  video_generator.py  voice_manager.py
src/tts_providers/: __init__.py  bark.py  base.py  coqui.py  el.py  f5tts.py  openai.py  piper.py  styletts2.py  tortoise.py
tests/: README.md  __init__.py  conftest.py  test_core.py  test_integration.py  test_providers.py  test_tts_engine.py
tests/data/: test_slides.md
tts_providers/: coqui.py  el.py  openai.py  piper.py
