[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholium"
version = "2026.2"
description = "Generate educational videos from markdown slides with AI voice synthesis"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Colin Caprani", email = "colin.caprani@monash.edu"}
]
keywords = ["tts", "education", "video", "slides", "lecture", "pandoc", "beamer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Piper TTS - Fast, local, no API key (recommended)
piper = [
    "piper-tts>=1.2.0",
    "pathvalidate>=3.0.0",
]

# ElevenLabs - Cloud API (requires API key)
elevenlabs = [
    "elevenlabs>=1.0.0,<3.0.0",
]

# Coqui TTS - Local with voice cloning
# Note: dependency conflicts may occur with newer torch/transformers
coqui = [
    "TTS>=0.22.0",
    "transformers",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

# OpenAI TTS - Cloud API (requires API key)
openai = [
    "openai>=1.0.0",
]

# Bark - High quality local TTS (slow)
bark = [
    "bark>=0.1.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

# F5-TTS - Fast, high-quality local voice cloning
# Requires a reference audio clip (5-15s); no training step needed
f5tts = [
    "f5-tts>=0.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]

# StyleTTS2 - Expressive local voice cloning with diffusion
# Uses the unofficial pip wrapper; for source install see:
# https://github.com/yl4579/StyleTTS2
styletts2 = [
    "styletts2>=0.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]

# Tortoise TTS - Very high quality, slower local voice cloning
# Voice cloning from a folder of short reference clips; no training required
tortoise = [
    "tortoise-tts>=2.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

# All TTS providers with known Python 3.11+ compatibility.
# Excludes coqui, bark, styletts2, and tortoise-tts due to transitive
# dependency conflicts on Python >= 3.11 — install those extras individually.
all = [
    "piper-tts>=1.2.0",
    "pathvalidate>=3.0.0",
    "elevenlabs>=1.0.0,<3.0.0",
    "openai>=1.0.0",
    "f5-tts>=0.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
scholium = "scholium.main:cli"
scholium-train = "scholium.train_voice:cli"

[project.urls]
Homepage = "https://github.com/ccaprani/scholium"
Issues = "https://github.com/ccaprani/scholium/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scholium*", "tts_providers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires pandoc, ffmpeg)",
    "slow: Slow running tests",
    "requires_tts: Tests requiring TTS API keys",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
